--- a/env.example
+++ b/env.example
@@ -5,10 +5,10 @@ GIT_SERVER=ssh://git@fleet-flows-git.lizzardsolutions.com
 FLOW_JS_BRANCH=main
 AIRTABLE_TABLE=Unipi
 MAX_RETRIES=5
-SLEEP_BETWEEN=5
+SLEEP_BETWEEN=10
 SCHEMA_FILE_PATH=
-NPM_VERSION=8.5.1~ds-1
-NODE_VERSION=12.22.9~dfsg-1ubuntu3.3
-
+NODE_VERSION=12.22.12-deb-1nodesource1
+NODE_SETUP_URL=https://deb.nodesource.com/setup_12.x
+REPO_TO_CHECK_SERVER_ACCESS=fleet-files
 
 # GIT_SERVER=git@git.reak.in:shaanil.khatri
