fix: builder pointed to init file

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Build
       run: |
-        go build -v -o installer ./...
+        go build -v -o installer ./main.go
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
