fix: env renamed

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -27,5 +27,5 @@ jobs:
         go build -v -o installer ./main.go
     - name: Semantic Release
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: npx semantic-release
