permission and user patch

--- a/env.example
+++ b/env.example
@@ -10,5 +10,5 @@ SCHEMA_FILE_PATH=
 NODE_VERSION=12.22.12-deb-1nodesource1
 NODE_SETUP_URL=https://deb.nodesource.com/setup_12.x
 REPO_TO_CHECK_SERVER_ACCESS=fleet-files
-
+HOME_DIR=
 # GIT_SERVER=git@git.reak.in:shaanil.khatri
